--- a/assets/styling.css
+++ b/assets/styling.css
@@ -105,7 +105,7 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle at bottom left, #141414, #141414, #141414, #4B0082);
+    background: radial-gradient(circle at bottom left, #4B0082, #141414, #141414, #141414, #4B0082);
     z-index: -1;
 }
 
